# goblin-agent

./: AGENTS.md  Cargo.toml  README.md  diesel.toml  goblin.default.yaml  goblin.schema.json  package-lock.json  package.json  rebrand.sh  setup.sh
.devcontainer/: devcontainer.json
.github/: contribution.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance_issue.yml  provider_integration.yml
.github/scripts/bounty/: README.md
.github/workflows/: ci.yml  release.yml
.goblin/skills/create-agent/: SKILL.md
.goblin/skills/create-command/: SKILL.md
.goblin/skills/create-github-issue/: SKILL.md
.goblin/skills/create-plan/: README.md  SKILL.md
.goblin/skills/debug-cli/: SKILL.md
.goblin/skills/post-forge-feature/: SKILL.md
.goblin/skills/resolve-conflicts/: SKILL.md
.goblin/skills/write-release-notes/: SKILL.md
benchmarks/: README.md  cli.ts
benchmarks/evals/commit_no_markdown/: task.yml
benchmarks/evals/create_skill/: task.yml
benchmarks/evals/echo/: task.yml
benchmarks/evals/suggest/: task.yml
crates/goblin_acp/: Cargo.toml
crates/goblin_acp/src/: lib.rs
crates/goblin_acp/src/adapter/: mod.rs
crates/goblin_acp/src/discovery/: mod.rs
crates/goblin_acp/src/registry/: mod.rs
crates/goblin_api/: Cargo.toml
crates/goblin_api/src/: api.rs  goblin_api.rs  lib.rs
crates/goblin_app/: Cargo.toml
crates/goblin_ci/: Cargo.toml
crates/goblin_cli/: Cargo.toml
crates/goblin_cli/src/: commands.rs  lib.rs  setup.rs
crates/goblin_config/: .forge.toml  Cargo.toml
crates/goblin_core/: Cargo.toml
crates/goblin_core/src/: lib.rs
crates/goblin_core/src/dojo/: mod.rs
crates/goblin_core/src/memory/: mod.rs
crates/goblin_core/src/persistence/: mod.rs
crates/goblin_core/src/skills/: mod.rs
crates/goblin_cron/: Cargo.toml
crates/goblin_cron/src/: lib.rs
crates/goblin_display/: Cargo.toml
crates/goblin_domain/: Cargo.toml
crates/goblin_embed/: Cargo.toml
crates/goblin_fs/: Cargo.toml
crates/goblin_gateway/: Cargo.toml
crates/goblin_gateway/src/: lib.rs
crates/goblin_gateway_email/: Cargo.toml
crates/goblin_gateway_email/src/: lib.rs
crates/goblin_gateway_whatsapp/: Cargo.toml
crates/goblin_gateway_whatsapp/src/: lib.rs
crates/goblin_honcho/: Cargo.toml
crates/goblin_honcho/src/: analyzer.rs  client.rs  context.rs  dialectic.rs  lib.rs  profile.rs
crates/goblin_infra/: Cargo.toml
crates/goblin_json_repair/: Cargo.toml
crates/goblin_main/: Cargo.toml  build.rs
crates/goblin_main/src/: banner.rs  built_in_commands.json  cli.rs  conversation_selector.rs  editor.rs  info.rs  input.rs  lib.rs  main.rs  model.rs  porcelain.rs  prompt.rs  sandbox.rs  state.rs  stream_renderer.rs  sync_display.rs  title_display.rs  tools_display.rs  tracker.rs  ui.rs  update.rs  vscode.rs
crates/goblin_main/src/completer/: command.rs  input_completer.rs
crates/goblin_main/src/zsh/: plugin.rs  rprompt.rs
crates/goblin_markdown_stream/: Cargo.toml
crates/goblin_personalities/: Cargo.toml
crates/goblin_personalities/src/: lib.rs
crates/goblin_repo/: Cargo.toml  build.rs
crates/goblin_research/: Cargo.toml
crates/goblin_research/src/: lib.rs
crates/goblin_research/src/atropos/: mod.rs
crates/goblin_research/src/batch/: mod.rs
crates/goblin_research/src/compression/: mod.rs
crates/goblin_select/: Cargo.toml  README.md
crates/goblin_services/: Cargo.toml
crates/goblin_services/src/: agent_registry.rs  app_config.rs  attachment.rs  auth.rs  command.rs  context_engine.rs  conversation.rs  discovery.rs  fd.rs  fd_git.rs  fd_walker.rs  instructions.rs  lib.rs  policy.rs  provider_auth.rs  provider_service.rs  services.rs  template.rs
crates/goblin_services/src/mcp/: manager.rs  service.rs  tool.rs
crates/goblin_services/src/tool_services/: fetch.rs  followup.rs  fs_patch.rs  fs_read.rs  fs_remove.rs  fs_search.rs  fs_undo.rs  fs_write.rs  image_read.rs  plan_create.rs  shell.rs  skill.rs
crates/goblin_skills_hub/: Cargo.toml
crates/goblin_skills_hub/src/: lib.rs
crates/goblin_snaps/: Cargo.toml
crates/goblin_spinner/: Cargo.toml
crates/goblin_stream/: Cargo.toml
crates/goblin_template/: Cargo.toml
crates/goblin_terminal_docker/: Cargo.toml
crates/goblin_terminal_docker/src/: lib.rs
crates/goblin_terminal_ssh/: Cargo.toml
crates/goblin_terminal_ssh/src/: lib.rs
crates/goblin_test_kit/: Cargo.toml
crates/goblin_tool_macros/: Cargo.toml
crates/goblin_tracker/: Cargo.toml
crates/goblin_voice/: Cargo.toml
crates/goblin_voice/src/: lib.rs
crates/goblin_walker/: Cargo.toml
docs/: tool-guidelines.md
plans/: 2025-04-02-system-context-rendering-final.md  2025-04-02-system-context-rendering-v1.md  2025-04-02-system-context-rendering-v2.md  2025-04-06-retry-config-migration.md  2025-04-11-tool-call-context-implementation.md  2025-04-16-model-selection-command.md  2025-04-26-large-file-read-range-support-v3.md  2025-04-27-large-file-read-range-support-v4.md  2025-06-07-tool-service-migration-v1.md  2025-09-07-shell-env-variable-support-v1.md  2025-09-08-agent-loader-cwd-extension-v1.md  2025-09-12-forge-dump-autoopen-env-var-v2.md  2025-09-13-dynamic-agent-slash-commands-v3.md  2025-09-13-forge-history-file-env-var-v2.md  2025-09-14-explicit-conversation-id-generation-v1.md  2025-09-27-AppConfigRepository_Implementation-v1.md  2026-01-22-Fix Auto-Sync Workspace Registration Issue-v1.md  2026-01-22-Fix Auto-Sync Workspace Registration Issue-v2.md  2026-03-31-slim-environment-and-add-get-config-v1.md  agent-context-compaction-2025-03-24-concise.md  agent-context-compaction-2025-03-24.md  agent-context-compaction-2025-03-25-concise.md  agent-context-compaction-2025-03-25.md
scripts/: benchmark.sh  list-all-porcelain.sh
shell-plugin/: README.md  doctor.zsh  goblin.plugin.zsh  goblin.setup.zsh  goblin.theme.zsh  keyboard.zsh
shell-plugin/lib/: bindings.zsh  completion.zsh  config.zsh  dispatcher.zsh  helpers.zsh  highlight.zsh
templates/: forge-command-generator-prompt.md  forge-custom-agent-template.md  forge-partial-tool-use-example.md
(+239 files in other folders)
