[package]
name = "goblin_cron"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["sync", "time", "rt"] }

# Serialization
serde = { workspace = true, features = ["derive"] }

# Date/Time
chrono = { workspace = true, features = ["serde"] }

# Error handling
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

[lib]
name = "goblin_cron"
path = "src/lib.rs"
