[package]
name = "goblin_gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["sync", "rt", "macros"] }

# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

[lib]
name = "goblin_gateway"
path = "src/lib.rs"
