[package]
name = "goblin_gateway_email"
version = "0.1.0"
edition = "2021"
description = "Goblin Email Gateway"
readme = "README.md"
license = "MIT"

[dependencies]
# Email
lettre = "0.10"
mailparse = "0.15"
imap = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Async trait
async-trait = "0.1"

# Error handling
anyhow = "1"
thiserror = "1"
