[package]
name = "goblin_gateway_whatsapp"
version = "0.1.0"
edition = "2021"
description = "Goblin WhatsApp Gateway"
readme = "README.md"
license = "MIT"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async trait
async-trait = "0.1"

# Error handling
anyhow = "1"
thiserror = "1"
