[package]
name = "goblin_honcho"
version = "0.1.0"
edition = "2021"
description = "User modeling and dialectic system for Goblin"
readme = "README.md"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# Async traits
async-trait = "0.1"

# Async utilities
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
