[package]
name = "goblin_main"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "goblin"
path = "src/main.rs"


[dependencies]
thiserror = { workspace = true }
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
goblin_app.workspace = true
goblin_api.workspace = true
goblin_domain.workspace = true
goblin_config.workspace = true
goblin_walker.workspace = true
goblin_display.workspace = true
goblin_tracker.workspace = true

goblin_spinner.workspace = true
goblin_select.workspace = true

merge.workspace = true
goblin_fs.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
colored.workspace = true

anyhow.workspace = true
derive_setters.workspace = true
lazy_static.workspace = true
reedline.workspace = true
nu-ansi-term.workspace = true
nucleo.workspace = true
tracing.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true

convert_case.workspace = true
update-informer = { version = "1.2.0", default-features = false, features = [
    "github",
    "ureq",
    "rustls-tls",
] }
open.workspace = true
humantime.workspace = true
num-format.workspace = true
atty = "0.2"
url.workspace = true
goblin_embed.workspace = true
include_dir.workspace = true
indexmap.workspace = true
async-recursion.workspace = true

goblin_markdown_stream.workspace = true
strip-ansi-escapes.workspace = true
terminal_size = "0.4"
rustls.workspace = true
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
enable-ansi-support.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
insta.workspace = true
pretty_assertions.workspace = true
serial_test = "3.4"
fake = { version = "5.1.0", features = ["derive"] }
goblin_domain = { path = "../goblin_domain" }
