[package]
name = "goblin_personalities"
version = "0.1.0"
edition = "2021"
description = "Goblin Personality System"
readme = "README.md"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"

# Directories
dirs = "5"
