[package]
name = "goblin_research"
version = "0.1.0"
edition = "2021"
description = "Research features for Goblin - batch trajectory generation, RL environments, compression"
authors = ["Goblin Team"]
license = "MIT"
homepage = "https://github.com/iangogentic/goblin-agent"
repository = "https://github.com/iangogentic/goblin-agent"

[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# LLM integration
reqwest = { version = "0.12", features = ["json"] }

# Async iterators
futures = "0.3"

# Random sampling
rand = "0.8"
rand_chacha = "0.3"

# Compression
zstd = "0.13"
lz4 = "1.24"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for trajectory IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Async channels
async-channel = "2.3"

# Progress bars
indicatif = { version = "0.17", features = ["tokio"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
